processed/gerrit/txt_full/60431.txt
Change:     60431
Subject:    LU-18925 build: 64k client do not use pgidx before defined
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/60431
Change-Id:  I359b3a927b2360d327da6dd7d7a6b92c9f2281d5
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Shaun Tancheff
Created:    2025-07-29 14:49:16.000000000
Updated:    2025-08-20 03:08:20.000000000
Patch Set:  2
Insertions: +2
Deletions:  -1
Comments:   3 (0 unresolved)

--- Labels ---
  Code-Review: James Simmons: +1; Alexey Lyashkov: +1; Oleg Drokin: +2; Timothy Day: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, James Simmons, Alexey Lyashkov, Timothy Day

--- Commit Message ---
LU-18925 build: 64k client do not use pgidx before defined

Build fix for 64k

dt_object.c:1034:53: error: 'pgidx' undeclared \
   (first use in this function); did you mean 'pid'?
 1034 |                 void *kaddr = kmap_local_page(pages[pgidx]);
      |                                                     ^~~~~
      |                                                     pid

Test-Parameters: trivial
Fixes: ea0bdfc7cf0 ("LU-18925 libcfs: prefer kmap_local_page")
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I359b3a927b2360d327da6dd7d7a6b92c9f2281d5
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/60431
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Timothy Day <timday@amazon.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Alexey Lyashkov <alexey.lyashkov@hpe.com>
Tested-by: Maloo <maloo@whamcloud.com>

--- Review History ---

--- Message (Shaun Tancheff, 2025-07-29 14:49:16.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2025-07-29 14:50:19.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2025-07-29 14:52:57.000000000) ---
Patch Set 1:

(1 comment)

Builds for x86_64 rocky8.10,rocky9.5 successful
Job output URL: https://testing.whamcloud.com/gerrit-janitor/53867/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs

--- Message (Lustre Gerrit Janitor, 2025-07-29 15:06:19.000000000) ---
Patch Set 1:

Initial testing succeeded.

Succeeded:
- runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs 

(rocky8.10)All results and logs: https://testing.whamcloud.com/gerrit-janitor/53867/results.html
Commencing standard testing: 
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity4@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity4@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single1@ldiskfs+DNE replay-single1@zfs replay-single2@ldiskfs+DNE replay-single2@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity3@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity3@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs

--- Message (jenkins, 2025-07-29 15:22:52.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/115374/ : SUCCESS

--- Message (Maloo, 2025-07-29 15:24:33.000000000) ---
Patch Set 1:

The following sessions will be run for build 115374 patch 1

Enforced:
- review-ldiskfs-dne on el8.10-x86_64/ldiskfs servers and clients
- review-ldiskfs-dne on el9.5-x86_64/ldiskfs servers and clients

Maloo Test Queue: https://testing.whamcloud.com/test_queue?jobs=lustre-reviews&builds=115374&commit=Apply+Filter
Maloo Results: https://testing.whamcloud.com/test_sessions/related?jobs=lustre-reviews&builds=115374#redirect

--- Message (Timothy Day, 2025-07-29 15:50:13.000000000) ---
Patch Set 1: Code-Review+1

(1 comment)

--- Message (James Simmons, 2025-07-29 15:52:42.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Lustre Gerrit Janitor, 2025-07-29 18:18:07.000000000) ---
Patch Set 1:

Even though "Test-Parameters: trivial" was detected, this deeply suspicious bot still run some testing

Testing has completed with errors!

> sanity-pcc@ldiskfs+DNE Failure(2531s)
- 1c(request on 0x200000bd1:0x4:0x0 is not SUCCEED on mds1) 

Succeeded:
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity4@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity4@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single1@ldiskfs+DNE replay-single1@zfs replay-single2@ldiskfs+DNE replay-single2@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity3@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity3@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs 

(rocky8.10)All results and logs: https://testing.whamcloud.com/gerrit-janitor/53867/results.html

--- Message (Alexey Lyashkov, 2025-07-30 08:27:35.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Alexey Lyashkov, 2025-07-30 08:28:20.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Maloo, 2025-07-31 02:24:45.000000000) ---
Patch Set 1: Verified-1

Passed enforced test review-ldiskfs-dne on RHEL 9.5 / x86_64 uploaded by Onyx Autotest from onyx-77vm7: https://testing.whamcloud.com/test_sessions/a240de91-143d-4c8d-8645-6f13ea03c510 ran 5 tests.

--- Message (Maloo, 2025-07-31 02:26:56.000000000) ---
Patch Set 1: Verified+1

Passed enforced test review-ldiskfs-dne on RHEL 8.10 / x86_64 uploaded by Onyx Autotest from onyx-140vm7: https://testing.whamcloud.com/test_sessions/9d0940b9-8317-4398-a5fe-e194046d7a43 ran 5 tests.

--- Message (Oleg Drokin, 2025-08-20 03:08:17.000000000) ---
Patch Set 1: Code-Review+2

--- Message (Oleg Drokin, 2025-08-20 03:08:20.000000000) ---
Change has been successfully cherry-picked as 41e415a1f5a4a8865fafa2ff7db30b97926917d6
